--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,7 +17,7 @@ blocks:
         - name: 'Job #1'
           commands:
             - echo test > test.txt
-            - artifacts push workflow test.txt
+            - artifact push workflow test.txt
   - name: 'Block #3'
     task:
       jobs:
