--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,9 +25,15 @@ blocks:
             - echo test > test2.txt
             - artifact push job test.txt
             - artifact push job test2.txt
-  - name: 'Block #3'
-    task:
-      jobs:
-        - name: 'Job #1'
-          commands:
-            - cat /tmp/system-metrics
+promotions:
+  - name: Deploy
+    pipeline_file: pipeline_2.yml
+    parameters:
+      env_vars:
+        - required: true
+          options:
+            - Stage
+            - Production
+          default_value: Stage
+          description: Where to deploy?
+          name: ENVIRONMENT
