Parallel parameterized promotion

--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -4,6 +4,8 @@ agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
+queue:
+  processing: parallel
 blocks:
   - name: 'Block #1'
     task:
