--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: Initial Pipeline
 agent:
   machine:
-    type: g1-standard-2
+    type: e1-standard-2
     os_image: ubuntu2004
 global_job_config:
   prologue:
