Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,6 +10,8 @@ global_job_config:
       - echo cole
 blocks:
   - name: 'Block #1'
+    run:
+      when: change_in('/web-app/')
     task:
       jobs:
         - name: 'Job #1'
@@ -17,6 +19,8 @@ blocks:
             - sudo service docker stop && sudo umount /var/lib/docker && sudo service docker start
             - cat /tmp/system-metrics
   - name: 'Block #2'
+    run:
+      when: change_in('/web-app/')
     task:
       jobs:
         - name: 'Job #1'
