--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,6 +18,10 @@ blocks:
             - sudo service docker stop && sudo umount /var/lib/docker && sudo service docker start
             - cat /tmp/system-metrics
             - cache store
+      agent:
+        machine:
+          type: a1-standard-8
+          os_image: macos-xcode13
   - name: 'Block #2'
     task:
       jobs:
