--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,9 +5,34 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: 'Block #1'
+  - name: Install deps
+    dependencies: []
     task:
       jobs:
-        - name: 'Job #1'
+        - name: bundle
           commands:
             - checkout
+            - make bundle
+  - name: Static analysis
+    dependencies: []
+    task:
+      jobs:
+        - name: Rubocop
+          commands:
+            - checkout
+            - make rubocop
+        - name: Lint
+          commands:
+            - checkout
+            - make lint
+  - name: Unit tests
+    dependencies:
+      - Install deps
+      - Static analysis
+    task:
+      jobs:
+        - name: RSpec
+          commands:
+            - checkout
+            - make rspec
+          parallelism: 4
